public/stylesheets/cerabox.css
#cerabox-loading {
	position: fixed;
	top: 50%;
	left: 50%;
	width: 40px;
	height: 40px;
	margin-top: -20px;
	margin-left: -20px;
	cursor: pointer;
	overflow: hidden;
	z-index: 1104;
	display: none;
}

#cerabox-loading div {
	position: absolute;
	top: 0;
	left: 0;
	width: 40px;
	height: 480px;
	background-image: url("/images/cerabox/cerabox.png");
}

#cerabox-background {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	z-index: 1100;
	display: none;
	background: #000;
	opacity: .5;
	-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
	filter: alpha(opacity=50);
}

#cerabox {
	position: absolute;
	top: 50%;
	left: 50%;
	z-index: 1101;
	display: none;
	opacity: 0;
	-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
	filter: alpha(opacity=0);
	background: #fff;
}

#cerabox .cerabox-content {
	width: 100%;
	height: 100%;
	padding: 0;
	outline: none;
	position: relative;
	overflow: hidden;
	z-index: 1102;
	border: 0px solid #fff;
	/*CSS3*/
	-moz-box-shadow: 0 0 30px -5px #333;
	-webkit-box-shadow: 0 0 30px -5px #333;
	box-shadow: 0 0 30px -5px #333;
}

#cerabox .cerabox-content img {
	float: left;
}

#cerabox .cerabox-content span {
	font-family: Helvetica;
	font-size: 12px;
	margin: 10px;
	display: block;
	color: #000;
	line-height: normal;
}

#cerabox .cerabox-title {
	z-index: 1102;
	position: absolute;
	bottom: 0;
	left: 0;
	color: #FFF;
	text-align: left;
	background: #000;
	background: rgba(0,0,0,.8);
	width: 100%;
}

#cerabox .cerabox-title span {
	font-family: Helvetica;
	font-size: 12px;
	margin: 10px;
	display: block;
	line-height: normal;
}


#cerabox .cerabox-close {
	position: absolute;
	top: -15px;
	right: -15px;
	width: 30px;
	height: 30px;
	background: transparent url('/images/cerabox/cerabox.png') -40px 0px;
	cursor: pointer;
	z-index: 1103;
}

#cerabox .cerabox-content img {
	width: 100%;
	height: 100%;
	padding: 0;
	margin: 0;
	border: none;
	outline: none;
	line-height: 0;
	vertical-align: top;
}

#cerabox .cerabox-content iframe {
	width: 100%;
	height: 100%;
	border: none;
	display: block;
}

#cerabox a.cerabox-left, #cerabox a.cerabox-right {
	position: absolute;
	bottom: 0px;
	height: 100%;
	width: 35%;
	cursor: pointer;
	outline: none;
	background: transparent url('/images/cerabox/blank.gif');
	z-index: 1103;
	display: none;
}

#cerabox a.cerabox-left {
	left: 0px;
}

#cerabox a.cerabox-right {
	right: 0px;
}

#cerabox a.cerabox-left span, #cerabox a.cerabox-right span {
	position: absolute;
	top: 50%;
	/*left: -9999px;*/
	width: 30px;
	height: 30px;
	margin-top: -15px;
	cursor: pointer;
	z-index: 1102;
	display: block;
}

#cerabox a.cerabox-left:hover span {
	background-image: url('/images/cerabox/cerabox.png');
	background-position: -40px -30px;
	left: -15px;
}

#cerabox a.cerabox-right:hover span {
	background-image: url('/images/cerabox/cerabox.png');
	background-position: -40px -60px;
	right: -15px;
}

/*IE6*/
#cerabox-loading.ceraboxbox-ie6 {
	position: absolute; margin-top: 0;
	top: expression( (-20 + (document.documentElement.clientHeight ? document.documentElement.clientHeight/2 : document.body.clientHeight/2 ) + ( ignoreMe = document.documentElement.scrollTop ? document.documentElement.scrollTop : document.body.scrollTop )) + 'px');
}

